Closed Bug 339244 Opened 18 years ago Closed 18 years ago

Layout won't build with --disable-inspector-apis

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: standard8, Assigned: standard8)

References

Details

Attachments

(1 file)

Layout won't build with --disable-inspector-apis (or MOZ_NO_INSPECTOR_APIS=1) because layout/build/nsLayoutModule.cpp and layout/build/nsLayoutStatics.cpp include .h files generated from idls. This causes builds to fail (e.g. minimo), http://tinderbox.mozilla.org/showlog.cgi?log=MiniMo/1148579820.23922.gz

Patch coming up.
All the other required ifndefs are there, its just these around the headers because we aren't generating the idls.
Attachment #223340 - Flags: superreview?(dbaron)
Attachment #223340 - Flags: review?(dbaron)
Comment on attachment 223340 [details] [diff] [review]
Add missing ifndefs

rs=me, dbaron commented on it in the original bug and I forgot that the IDL-generated headers wouldn't be present.
Attachment #223340 - Flags: superreview?(dbaron)
Attachment #223340 - Flags: review?(dbaron)
Attachment #223340 - Flags: review+
Patch Checked in
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: