Bug 339244 Layout won't build with --disable-inspector-apis r=benjamin,sr=dbaron